ConsoleApp1/ConsoleApp1/Lexer.cs
/* Generated by re2c 0.13.5 on Sun Mar 24 16:42:20 2019 */
namespace SampleLanguage.Interpreter
{
    public class Lexer : yyParser.yyInput
    {
        private string _script;
        private string _value;
        private int _index;
        private int _token;
        private int _cursor;
        private int _marker; public Lexer(string script)
        {
            _script = script;
        }
        public bool advance()
        {
            if (_script.Length - 1 <= _index)
            {
                _token = Token.yyErrorCode;
                _value = "";
                return false;
            }

            _token = Lex(_index);
            _value = _script.Substring(_index, (_cursor - _index));
            _index = _cursor;

            return true;
        }

        public int token()
        {
            return _token;
        }

        public object value()
        {
            switch (_token)
            {
                case Token.NUM:
                    return double.Parse(_value);

                default:
                    return _value;
            }
        }

        private int YYPEEK()
        {
            if (_cursor == _script.Length)
            {
                return 0;
            }

            return (int)_script[_cursor];
        }

        private void YYSKIP()
        {
            _cursor++;
        }

        private void YYBACKUP()
        {
            _marker = _cursor;
        }

        private void YYRESTORE()
        {
            _cursor = _marker;
        }

        private int Lex(int startIndex)
        {
            _cursor = startIndex;
            YYBACKUP();
        loop:

            {
                int yych;

                yych =  _script[_cursor];
                switch (yych)
                {
                    case '\t':
                    case '\n':
                    case '\v':
                    case '\r':
                    case ' ': goto yy3;
                    case '(': goto yy14;
                    case ')': goto yy16;
                    case '*': goto yy10;
                    case '+': goto yy6;
                    case '-': goto yy8;
                    case '/': goto yy12;
                    case '0': goto yy18;
                    case '1':
                    case '2':
                    case '3':
                    case '4':
                    case '5':
                    case '6':
                    case '7':
                    case '8':
                    case '9': goto yy20;
                    default: goto yy2;
                }
            yy2:
                _cursor = _marker;
                goto yy19;
            yy3:
                ++_cursor;
                yych = _script[_cursor];
                switch (yych)
                {
                    case '\t':
                    case '\n':
                    case '\v':
                    case '\r':
                    case ' ': goto yy3;
                    default: goto yy5;
                }
            yy5:
                { _index = _cursor; goto loop; }
            yy6:
                ++_cursor;
                { return Token.OP_ADD; }
            yy8:
                ++_cursor;
                { return Token.OP_SUB; }
            yy10:
                ++_cursor;
                { return Token.OP_MUL; }
            yy12:
                ++_cursor;
                { return Token.OP_DIV; }
            yy14:
                ++_cursor;
                { return Token.LP; }
            yy16:
                ++_cursor;
                { return Token.RP; }
            yy18:
                yych = _script[_marker = ++_cursor];
                switch (yych)
                {
                    case '.': goto yy22;
                    default: goto yy19;
                }
            yy19:
                { return Token.NUM; }
            yy20:
                _marker = ++_cursor;
                yych = _script[_cursor];
                switch (yych)
                {
                    case '.': goto yy22;
                    case '0':
                    case '1':
                    case '2':
                    case '3':
                    case '4':
                    case '5':
                    case '6':
                    case '7':
                    case '8':
                    case '9': goto yy20;
                    default: goto yy19;
                }
            yy22:
                yych = _script[_cursor];
                switch (yych)
                {
                    case '0':
                    case '1':
                    case '2':
                    case '3':
                    case '4':
                    case '5':
                    case '6':
                    case '7':
                    case '8':
                    case '9': goto yy23;
                    default: goto yy2;
                }
            yy23:
                ++_cursor;
                yych = _script[_cursor];
                switch (yych)
                {
                    case '0':
                    case '1':
                    case '2':
                    case '3':
                    case '4':
                    case '5':
                    case '6':
                    case '7':
                    case '8':
                    case '9': goto yy23;
                    default: goto yy19;
                }
            }

        }
    }
}
